# Search_Engine

./: .gitignore  CMakeLists.txt  README.md
data/: config.json  requests.json
include/: converter_json.h  inverted_index.h  search_server.h
src/: converter_json.cpp  inverted_index.cpp  main.cpp  search_server.cpp
tests/: test.cpp
